<resources>
    <string name="app_name">My Zodiac App</string>
    <string name="app_logo">App Logo</string>
    <string name="star">Star Image</string>
    <string name="show_my_zodiac_sign">Show My Zodiac Sign</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="name">Name</string>
    <string name="welcome">Welcome</string>
    <string name="zodiac_sign">Zodiac Sign</string>
    <string name="zodiac_sign_traits">Traits will display here</string>
    <string name="aries_traits">The first sign of the Zodiac, Aries are the trailblazers. Passionate and independent, Aries will never do something just because everyone else is doing it—a Ram needs to be 100 percent committed to the task at hand. Competitive to the max, the best way to motivate an Aries is to turn something into a contest. Aries will put everything they have (and then some) into winning. Loyal, smart, and impulsive, they always have multiple projects on their mind, and won\'t be satisfied until their work, social life, and personal lives line up exactly with the dream life they\'ve envisioned. Those who are drawn to magnetic Aries may have trouble keeping up—but if they can, they\'ll have a friend for life.\n\nAn Aries sign will always tell you what they\'re thinking, with a frankness that may occasionally border on rudeness. But even if an Aries seems overly blunt with their opinion, that\'s only because Rams value honesty above all else. And it works both ways. While an Aries may be the first to say if they think that you just phoned in a project, they\'ll also be the first to compliment you for a job well done. Rams may also have a short fuse. That fiery temper can be an asset. When an Aries is angry, they\'ll never play the passive-aggressive card. But for people who don\'t know them well, their temper can be a turn off. Learning how to work out their anger—whether by going to the gym every day, taking some deep breaths, or learning to chill before they Tweet their thoughts to the world—is a lifelong process for Rams.\n\nWhen it comes to love, Aries signs are all about initial attraction. They can sense chemistry in the first sentence uttered by a potential partner. Forthright and unabashed, an Aries will do everything in their power to go after someone they want. Sometimes, they need to learn how to slow down and foster long-term connections. Fireworks are fun, but they don\'t necessarily make a great match. Aries are amazing lovers: versatile, passionate, and always invested in the moment.</string>
    <string name="taurus_traits">Smart, ambitious, and trustworthy, Taurus is the anchor of the Zodiac. Amazing friends, colleagues, and partners, Taureans value honesty above all else and are proud that their personal relationships tend to be drama free. Bulls get the reputation of being stubborn, but they\'re not always stuck in their ways. This searching sign is willing to see another point of view, but they won\'t flip-flop on an opinion just to make someone else happy. They will shift their thinking only if they truly have a change of heart.\n\nWith a rep as one of the hardest-working signs in the Zodiac, a Bull is never afraid to roll up those sleeves and get to work, and won\'t blink an eye at pulling an all-nighter to get the job done. But it\'s not all work for a Taurus sign. Anchored by the earth, this passionate sign is all about sensuality, and is always seeking out pleasure. Whether they\'re indulging in luxurious massages, spending hours in bed with their lover, or going on a long run, Taureans love feeling present in their body and frequently need to get in touch with their physical self.\n\nWhen it comes to love, Taureans are all about honesty, which is why a first date with a Bull may resemble a job interview. They\'re not being rude—they\'re built for partnerships and are simply trying to see if you\'re a good fit at the start. And once you begin dating a Taurus, forget about white lies. A Taurus would much rather hear that an outfit is unflattering than endure hollow compliments. Taurus will hold a grudge against someone who lies, even if it\'s a lie just to make them feel happy. In bed, Taurus is a giving lover—as long as their partner steps it up and makes sure to give as well as receive pleasure! Detail-oriented Taurus may seem nitpicky (even in the bedroom, a mid-romp critique may not be unusual), but that\'s not because they want to offend. They simply demand the best, and they expect the people in their life to deliver.\n\nWhile Taurus signs have an intense internal drive, they sometimes have trouble respecting authority, especially if asked to do something they think is pointless or should be done differently. Learning to be flexible and go with the flow can be an advantage to Taurus. And while Taureans have a rich internal life, they value external attributes and may overlook someone who doesn\'t have the perfect outfit, car, or resume. Learning the benefits of getting to know someone before writing them off can be a lifelong lesson to a Taurean, especially in love, where they might be too hasty to write off a perfect match.</string>
    <string name="gemini_traits">Smart, passionate, and dynamic, Gemini is characterized by the Twins, Castor and Pollux, and is known for having two different sides they can display to the world. Expert communicators, Gemini is the chameleon of the Zodiac, adept at blending into different groups based on the vibe and energy they perceive. While they\'re also amazing at showcasing surface traits, the Gemini well runs deep, which is why the Twins are one of the Zodiac\'s most emotionally intelligent signs.\n\nEnergetic and quick-witted, Gemini never gets stuck in the past and doesn\'t ruminate on what might have been. Instead, they move forward with glass-half-full optimism and an ability to always look on the bright side—and land on their feet—in nearly any situation. With a mind that\'s constantly racing, even when they\'re just quietly hanging out, the Twins never get bored. In fact, Gemini are happy keeping their own company, and can often turn their solitary daydreams into reality.\n\nGemini signs are in love with love, and they adore the ritual of it all, from those \"do they like me?\" butterflies to the anticipation of a back-and-forth text volley. Gemini loves dating, and the world loves Gemini. But a Gemini will eventually settle down, because this sign is incredibly loyal and steadfast once they\'ve chosen a partner. Let\'s be clear, though: Steadfast isn\'t a code word for boring. Gemini always love to keep things fresh and are happy to try almost anything in the bedroom. They\'re proud of their sexuality and depend on frequent physical check-ins to keep them grounded in their body. To them, sex is a celebration of life, and Gemini loves both sex and life.\n\nDespite their unfair rep for being two-faced, once a Gemini is in your life, they\'re loyal for life—but they aren\'t afraid to voice their opinion if they feel you\'re doing something they disagree with or if they perceive you as not being loyal to them. Always a sign to see all sides of the situation, Gemini may seek input from friends before going to the root of the problem. It\'s not gossiping—it\'s gathering information.\n\nAnd even though Gemini is easily the life of the party without trying, the Twins also have a deep emotional side that needs care and feeding. Gemini like time by themselves to read, create, daydream, and come up with other ways of sharing their gifts with the world. When a Gemini can truly tap in and share their gifts, they\'re an unstoppable force of energy that can motivate, inspire, and enchant the rest of the Zodiac.</string>
    <string name="date_range">Date Range</string>
    <string name="your_zodiac_sign_traits">Your Zodiac Sign Traits</string>
    <string name="more_details">More Details</string>
    <string name="my_zodiac_app">My Zodiac App</string>
    <string name="app_welcome_text">Welcome to the Zodiac App\nYour gateway to the stars! Simply enter your name and date of birth to discover your zodiac sign. Dive deeper into your unique traits, strengths, and compatibility by clicking on your sign. Unearth the secrets of the cosmos and embrace your celestial identity today!</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lobortis scelerisque fermentum dui faucibus in. Eu turpis egestas pretium aenean pharetra magna. Consectetur a erat nam at lectus urna. Turpis massa tincidunt dui ut ornare lectus sit. Eu tincidunt tortor aliquam nulla facilisi cras fermentum odio eu. Proin libero nunc consequat interdum varius. Egestas fringilla phasellus faucibus scelerisque. Amet purus gravida quis blandit turpis cursus. Nibh ipsum consequat nisl vel pretium. Venenatis tellus in metus vulputate eu scelerisque felis. Non pulvinar neque laoreet suspendisse.\n\nVenenatis urna cursus eget nunc scelerisque viverra mauris in. Quam elementum pulvinar etiam non quam lacus suspendisse faucibus interdum. In egestas erat imperdiet sed euismod nisi porta lorem mollis. Sed enim ut sem viverra aliquet eget sit. Vel risus commodo viverra maecenas accumsan lacus. Fermentum leo vel orci porta. Tincidunt arcu non sodales neque sodales ut etiam. Suscipit adipiscing bibendum est ultricies integer quis auctor. Eget nulla facilisi etiam dignissim diam quis. Aenean pharetra magna ac placerat vestibulum lectus. Feugiat nibh sed pulvinar proin gravida hendrerit lectus a. Eget gravida cum sociis natoque. Accumsan tortor posuere ac ut consequat semper viverra nam libero. Venenatis urna cursus eget nunc scelerisque. Quisque non tellus orci ac auctor augue. Felis bibendum ut tristique et egestas quis ipsum. Lobortis mattis aliquam faucibus purus in massa tempor nec. Enim neque volutpat ac tincidunt vitae semper quis lectus.\n\nVitae proin sagittis nisl rhoncus mattis. Varius vel pharetra vel turpis nunc. Quam quisque id diam vel quam elementum pulvinar etiam non. Id diam vel quam elementum. In fermentum et sollicitudin ac orci phasellus egestas tellus. Mi sit amet mauris commodo quis. Vivamus at augue eget arcu dictum. Non enim praesent elementum facilisis. Nisl rhoncus mattis rhoncus urna neque viverra justo nec. Auctor augue mauris augue neque gravida in fermentum. Imperdiet massa tincidunt nunc pulvinar sapien et ligula. Semper eget duis at tellus. Cras adipiscing enim eu turpis egestas pretium aenean. Faucibus in ornare quam viverra orci. Bibendum neque egestas congue quisque egestas diam in.</string>
    <string name="home">Home</string>
    <string name="career_img">Career Image</string>
</resources>