<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".ui.fragments.MainFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/app_title_card"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/tvAppTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/coiny"
                android:gravity="center"
                android:text="@string/my_zodiac_app"
                android:textSize="40sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/main_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/ivLogoMainFrag"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/logo" />

                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/app_welcome_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <View
                        android:id="@+id/horizontal_line1"
                        android:layout_width="100dp"
                        android:layout_height="3dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/blue" />

                    <ImageView
                        android:id="@+id/ivStar1"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/color_star" />

                    <ImageView
                        android:id="@+id/ivStar2"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/color_star" />

                    <ImageView
                        android:id="@+id/ivStar3"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/color_star" />

                    <View
                        android:id="@+id/horizontal_line2"
                        android:layout_width="100dp"
                        android:layout_height="3dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/blue" />
                </LinearLayout>


                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edit_bg"
                    android:hint="@string/name"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etDOB"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edit_bg"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/date_of_birth"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnShowZodiacSign"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/show_my_zodiac_sign"
                    android:textSize="20sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>


</ScrollView>